--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "@testing-library/user-event": "^12.6.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "4.0.1",
+    "react-scripts": "^4.0.3",
     "react-scroll": "^1.8.1",
     "scroll": "^3.0.1",
+    "typewriter-effect": "^2.17.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
